LSPCON mode takes too long to long to settle on certain devices
On some CometLake-based device designs the Parade PS175 takes more than the default timeout of 400ms to settle in PCON mode. This can be reproduced by repeatedly rebooting the device and observing *ERROR* LSPCON mode hasn't settled
in the logs. Impact is a non-working display.
Repro rate: 100 reboot trials on one device resulted in a median settle time of 440ms and a maximum of 444ms. Even after increasing the timeout to 500ms, 2% of our devices still had this error.
System info:
uname -m
: x86_64
uname -r
: 4.19.168-10959
Linux distro: ChromeOS
Board/model: Internal Google hardware
Display connector: HDMI
Logs: internal logs not available. Relevant log line is [drm:lspcon_wait_mode] *ERROR* LSPCON mode hasn't settled